Generate and setup basic server.
