# pkg/api/types.gen.go
@@ -1,0 +1,55 @@
+// Package Openapi provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.10.1 DO NOT EDIT.
+package api
+
+// LoginRequest defines model for LoginRequest.
+type LoginRequest struct {
+	// Password of an user account
+	Password string `json:"password"`
+
+	// Username of an user account
+	Username string `json:"username"`
+}
+
+// LoginResponse defines model for LoginResponse.
+type LoginResponse struct {
+	// A JWT access token generated for this login session
+	AccessToken string `json:"access_token"`
+}
+
+// A problem details response, which occured during processing of a request
+type ProblemDetails struct {
+	// Human-readable explanation specific to this occurrence of the problem
+	Detail string `json:"detail"`
+
+	// A short, human-readable summary of the problem type
+	Title string `json:"title"`
+
+	// An URI for identifiyng problem type
+	Type string `json:"type"`
+}
+
+// Request body for signing up new user
+type SignupRequest struct {
+	// Email address of a new user account
+	Email string `json:"email"`
+
+	// Password for getting access to the new user account
+	Password string `json:"password"`
+
+	// Username with which new user account will be identified in the system
+	Username string `json:"username"`
+}
+
+// LoginJSONBody defines parameters for Login.
+type LoginJSONBody LoginRequest
+
+// SignupJSONBody defines parameters for Signup.
+type SignupJSONBody SignupRequest
+
+// LoginJSONRequestBody defines body for Login for application/json ContentType.
+type LoginJSONRequestBody LoginJSONBody
+
+// SignupJSONRequestBody defines body for Signup for application/json ContentType.
+type SignupJSONRequestBody SignupJSONBody
